Some bugfixes for deployment

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings" : {
+    "Default": "Data source=data.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
