--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings" : {
-    "Default": "Data source=data.db"
+    "Default": "Server=localhost; Port=5432; User Id=devuser; Password=secret; Database=calculatordb"
   },
   "Logging": {
     "LogLevel": {
